// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Rendering edit modal form Fields in the form 1`] = `
<div
  className="edit-form"
  style={
    Object {
      "opacity": 0,
      "transform": "translateX(200px)",
    }
  }
>
  <div
    className="title-container"
  >
    <h2
      className="title"
    >
      
    </h2>
    <i
      className="fal fa-times fa-lg close-form"
    />
  </div>
  <div>
    {"data":{},"fields":[{"id":"foo","label":"Foo"},{"id":"bar","label":"Bar"}]}
  </div>
  <div>
    {"currentIndex":null}
  </div>
</div>
`;

exports[`Rendering edit modal form Title of the form 1`] = `
<div
  className="edit-form"
  style={
    Object {
      "opacity": 0,
      "transform": "translateX(200px)",
    }
  }
>
  <div
    className="title-container"
  >
    <h2
      className="title"
    >
      Test Record
    </h2>
    <i
      className="fal fa-times fa-lg close-form"
    />
  </div>
  <div>
    {"data":{},"fields":[]}
  </div>
  <div>
    {"currentIndex":null}
  </div>
</div>
`;
